<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/assets_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/selection_action_buttons"
        android:layout_below="@id/pathbar_layout"
        android:orientation="vertical"
        android:paddingBottom="70dp"
        android:clipToPadding="false"/>

    <LinearLayout
        android:id="@id/selection_action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/selection_cancel_button"
            style="@style/action_button_style"
            android:text="Cancel"
            android:background="@color/light_grey"/>

        <Button
            android:id="@+id/selection_select_all_button"
            style="@style/action_button_style"
            android:text="ALL"
            android:background="@color/light_grey" />

        <Button
            android:id="@+id/selection_delete_button"
            style="@style/action_button_style"
            android:text="DELETE"
            android:background="@color/light_grey" />

        <Button
            android:id="@+id/selection_move_button"
            style="@style/action_button_style"
            android:text="Move"
            android:background="@color/light_grey" />

    </LinearLayout>

</RelativeLayout>
