package nz.ac.aut.comp705.sortmystuff.ui.main;

import android.app.Activity;
import android.app.Instrumentation;
import android.content.ContentResolver;
import android.content.Context;
import android.content.Intent;
import android.content.res.Resources;
import android.graphics.Bitmap;
import android.net.Uri;
import android.os.SystemClock;
import android.provider.MediaStore;
import android.support.test.InstrumentationRegistry;
import android.support.test.espresso.contrib.RecyclerViewActions;
import android.support.test.espresso.intent.rule.IntentsTestRule;
import android.support.test.espresso.matcher.RootMatchers;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.util.Log;
import android.view.View;
import android.widget.EditText;
import android.widget.TextView;

import com.desmond.squarecamera.CameraActivity;
import com.google.common.base.Preconditions;
import com.google.firebase.auth.FirebaseAuth;

import junit.framework.Assert;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.After;
import org.junit.AfterClass;
import org.junit.Before;
import org.junit.BeforeClass;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.io.IOException;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.List;

import nz.ac.aut.comp705.sortmystuff.R;
import nz.ac.aut.comp705.sortmystuff.SortMyStuffApp;
import nz.ac.aut.comp705.sortmystuff.data.IDataManager;
import nz.ac.aut.comp705.sortmystuff.data.models.CategoryType;
import nz.ac.aut.comp705.sortmystuff.di.IFactory;
import nz.ac.aut.comp705.sortmystuff.utils.AppConfigs;
import rx.Observable;
import rx.schedulers.Schedulers;

import static android.support.test.espresso.Espresso.onData;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.longClick;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.action.ViewActions.swipeLeft;
import static android.support.test.espresso.action.ViewActions.swipeRight;
import static android.support.test.espresso.assertion.ViewAssertions.doesNotExist;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.intent.Intents.intended;
import static android.support.test.espresso.intent.Intents.intending;
import static android.support.test.espresso.intent.matcher.IntentMatchers.hasComponent;
import static android.support.test.espresso.matcher.ViewMatchers.isChecked;
import static android.support.test.espresso.matcher.ViewMatchers.isDescendantOfA;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.isNotChecked;
import static android.support.test.espresso.matcher.ViewMatchers.withChild;
import static android.support.test.espresso.matcher.ViewMatchers.withClassName;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withParent;
import static android.support.test.espresso.matcher.ViewMatchers.withSpinnerText;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static nz.ac.aut.comp705.sortmystuff.ui.testutils.TestConfigs.TEST_USER_EMAIL;
import static nz.ac.aut.comp705.sortmystuff.ui.testutils.TestConfigs.TEST_USER_PASSWORD;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.containsString;
import static org.hamcrest.Matchers.endsWith;
import static org.hamcrest.Matchers.hasToString;
import static org.hamcrest.Matchers.instanceOf;
import static org.hamcrest.Matchers.is;
import static org.hamcrest.Matchers.not;

@RunWith(AndroidJUnit4.class)
public class SwipeActivityTest {

    public SwipeActivityTest() {
    }

    @BeforeClass
    public static void setUpBeforeClass() {
        FirebaseAuth auth = FirebaseAuth.getInstance();
        if (auth.getCurrentUser() == null) {
            auth.signInWithEmailAndPassword(TEST_USER_EMAIL, TEST_USER_PASSWORD)
                    .addOnCompleteListener(task -> {
                        if (task.isSuccessful()) {
                            Log.d(TAG, "signInWithEmail:success");
                        } else {
                            Log.e(TAG, "signInWithEmail:failure", task.getException());
                        }

                        if (!task.isSuccessful()) {
                            Log.e(TAG, "signInWithEmail:failure", task.getException());
                        }
                    });
        }
    }

    @Before
    public void setUp() {
        mContext = InstrumentationRegistry.getTargetContext();
        mApp = (SortMyStuffApp) mContext.getApplicationContext();
        if (mApp.getFactory() == null)
            mApp.initialiseFactory(FirebaseAuth.getInstance().getCurrentUser());
        mFactory = mApp.getFactory();
        mDataManager = mFactory.getDataManager();

        // remove current user data
        mFactory.getDataDebugHelper().removeCurrentUserData();

        Intent intent = new Intent(mApp, SwipeActivity.class);
        mActivity = swipeActivityRule.launchActivity(intent);
    }

    @After
    public void tearDown() {
        mActivity.finish();
    }

    @AfterClass
    public static void tearDownAfterClass() {
        FirebaseAuth.getInstance().signOut();
    }

    @Rule
    public ActivityTestRule<SwipeActivity> swipeActivityRule
            = new ActivityTestRule<>(SwipeActivity.class, false, false);

    /* Instantiate an IntentsTestRule object.*/
    @Rule
    public IntentsTestRule<SwipeActivity> intentsRule =
            new IntentsTestRule<>(SwipeActivity.class, true, false);

    //region TESTS

    @Test
    public void onLaunch_displayRootAssetTitle() {
        onView(withId(R.id.main_toolbar)).check(matches(isDisplayed()));

        checkToolbarTitle(ROOT_ASSET_NAME);
    }

    @Test
    public void onLaunch_displayRootOnPathBar() {
        onView(withId(R.id.pathbar_root)).check(matches(isDisplayed()));
        onView(withId(R.id.pathbar_root)).check(matches(withText(ROOT_ASSET_NAME + " >")));
    }

    @Test
    public void addAsset_clickAddAssetButton() {
        onView(withId(R.id.add_asset_button)).check(matches(isDisplayed()));
        onView(withId(R.id.add_asset_button)).perform(click());
        onView(withText(R.string.add_asset_dialog_title)).check(matches(isDisplayed()));
    }

    @Test
    public void addAsset_inputNameAndConfirm() {
        addAsset(ASSET1_NAME);

        onView(withId(R.id.assets_list)).check(matches(isDisplayed()));
        onData(anything()).inAdapterView(withId(R.id.assets_list))
                .atPosition(0).onChildView(withId(R.id.asset_name))
                .check(matches(withText(ASSET1_NAME)));
    }

    @Test
    public void addAsset_cancelDialogBox() {
        onView(withId(R.id.add_asset_button)).perform(click());
        //type asset name into text area in dialog box
        onView(allOf(withClassName(endsWith("EditText")), withText(is("")))).perform(replaceText(ASSET1_NAME));
        //click on cancel button in dialog box
        onView(withText(R.string.cancel_button)).perform(click());
        //asset should not be added
        Assert.assertFalse(onData(anything()).inAdapterView(withId(R.id.assets_list)).atPosition(0).equals(ASSET1_NAME));
    }

    @Test
    public void addAsset_addAssetsWithIllegalNames() {
        addAsset("");
        onView(withId(R.id.assets_list)).check(matches(isDisplayed()));

        String longAssetName = "";
        for (int i = 0; i <= AppConfigs.ASSET_NAME_CAP; i++) {
            longAssetName += "a";
        }
        addAsset(longAssetName);
        onView(withId(R.id.assets_list)).check(matches(isDisplayed()));
        onView(withChild(withText(longAssetName))).check(doesNotExist());
    }

    @Test
    public void addAsset_withDefaultCategory() {
        onView(withId(R.id.add_asset_button)).perform(click());
        onView(allOf(is(instanceOf(EditText.class)), withText(is(""))))
                .perform(replaceText(ASSET1_NAME));

        // check if the category has been selected as the default
        onView(withId(R.id.category_spinner))
                .check(matches(withSpinnerText(containsString(DEFAULT_CATEGORY.toString()))));
        onView(withText(R.string.add_asset_confirm_button)).perform(click());

        clickAsset(0);
        swipeToDetailsPage();
        checkToolbarTitle(ASSET1_NAME);

        // check if the category is displayed correctly
        onView(withId(R.id.assetCategory_detail))
                .check(matches(withText(DEFAULT_CATEGORY.toString().toUpperCase())));

        checkDetailsListOfMiscellaneous();
    }

    @Test
    public void addAsset_withSpecifiedCategory() {
        onView(withId(R.id.add_asset_button)).perform(click());
        onView(allOf(is(instanceOf(EditText.class)), withText(is(""))))
                .perform(replaceText(ASSET1_NAME));
        onView(withId(R.id.category_spinner)).perform(click());

        // select "Food" category
        onData(allOf(is(instanceOf(CategoryType.class)), is(SPECIFIED_CATEGORY)))
                .inRoot(RootMatchers.isPlatformPopup()).perform(click());

        // check if the "Food" has been selected
        onView(withId(R.id.category_spinner))
                .check(matches(withSpinnerText(containsString(SPECIFIED_CATEGORY.toString()))));
        onView(withText(R.string.add_asset_confirm_button)).perform(click());

        clickAsset(0);
        swipeToDetailsPage();
        checkToolbarTitle(ASSET1_NAME);

        // check if the category is displayed correctly
        onView(withId(R.id.assetCategory_detail))
                .check(matches(withText(SPECIFIED_CATEGORY.toString().toUpperCase())));

        checkDetailsListOfFood();
    }

    @Test
    public void onClickAssetFromList_displayAssetNameOnToolbar() {
        addAsset(ASSET1_NAME);
        clickAsset(0);
        onView(withId(R.id.main_toolbar)).check(matches(isDisplayed()));
        //check that the name on the toolbar is the name of the selected asset
        checkToolbarTitle(ASSET1_NAME);
    }

    @Test
    public void onClickAssetFromList_addChildAsset() {
        addAsset(ASSET1_NAME);
        clickAsset(0);
        addAsset(ASSET2_NAME);
        onView(withId(R.id.assets_list)).check(matches(isDisplayed()));
        //check that assets can added into child assets
        onData(anything()).inAdapterView(withId(R.id.assets_list))
                .atPosition(0).onChildView(withId(R.id.asset_name))
                .check(matches(withText(ASSET2_NAME)));
    }

    @Test
    public void displayPathbar_lengthWithinScreen() {
        // add asset1 and goes into asset1
        addAsset(ASSET1_NAME);
        clickAsset(0);
        onView(withItemTextOnPathBar(PATH_BAR_0_PREFIX + ASSET1_NAME))
                .check(matches(isDisplayed()));

        // add asset2 and goes into asset2, so path should be asset1 > asset2
        addAsset(ASSET2_NAME);
        clickAsset(0);
        onView(withItemTextOnPathBar(PATH_BAR_PREFIX + ASSET2_NAME))
                .check(matches(isDisplayed()));

        // Root asset should always display
        onView(withId(R.id.pathbar_root))
                .check(matches(isDisplayed()));
    }

    @Test
    public void displayPathbar_lengthExceedsScreen() throws InterruptedException {
        List<String> names = new ArrayList<>(Arrays.asList(
                ASSET_NAME + 0, ASSET_NAME + 1, ASSET_NAME + 2, ASSET_NAME + 3, ASSET_NAME + 4
        ));

        for (int i = 0; i < names.size(); i++) {
            addAsset(names.get(i));
            clickAsset(0);
        }

        // the path bar shall not display the first added asset as the list is too long
        // while the last asset shall be displayed
        onView(withItemTextOnPathBar(PATH_BAR_0_PREFIX + names.get(0)))
                .check(doesNotExist());
        onView(withItemTextOnPathBar(PATH_BAR_PREFIX + names.get(4)))
                .check(matches(isDisplayed()));

        // Root asset should also be displayed
        onView(withId(R.id.pathbar_root))
                .check(matches(isDisplayed()));

        // swipe the path bar to the first asset, then the first asset shall be displayed
        onView(withId(R.id.pathbar_pathview))
                .perform(RecyclerViewActions.scrollToPosition(0));
        onView(withItemTextOnPathBar(PATH_BAR_0_PREFIX + names.get(0)))
                .check(matches(isDisplayed()));
    }

    @Test
    public void clickOnPathbarRootAsset() {
        // add asset1 and goes into asset1
        addAsset(ASSET1_NAME);
        clickAsset(0);
        onView(withItemTextOnPathBar(PATH_BAR_0_PREFIX + ASSET1_NAME))
                .check(matches(isDisplayed()));

        // make sure its directed to asset1's contents view
        checkToolbarTitle(ASSET1_NAME);

        onView(withId(R.id.pathbar_root)).perform(click());

        // after click on Root asset on path bar
        // should direct back to Root's contents view and asset1 removed from path bar
        checkToolbarTitle(ROOT_ASSET_NAME);
        onView(withItemTextOnPathBar(PATH_BAR_0_PREFIX + ASSET1_NAME))
                .check(doesNotExist());
    }

    @Test
    public void clickOnPathbarAsset_lengthWithinScreen() {
        // add asset1 and goes into asset1
        addAsset(ASSET1_NAME);
        clickAsset(0);
        onView(withItemTextOnPathBar(PATH_BAR_0_PREFIX + ASSET1_NAME))
                .check(matches(isDisplayed()));

        addAsset(ASSET2_NAME);
        clickAsset(0);
        onView(withItemTextOnPathBar(PATH_BAR_PREFIX + ASSET2_NAME))
                .check(matches(isDisplayed()));

        // make sure its directed to asset2's contents view
        checkToolbarTitle(ASSET2_NAME);

        // click on asset1 while in asset2's contents view
        onView(withItemTextOnPathBar(PATH_BAR_0_PREFIX + ASSET1_NAME))
                .perform(click());

        // should direct back to asset1's contents view and asset2 removed from path bar
        checkToolbarTitle(ASSET1_NAME);
        onView(withItemTextOnPathBar(PATH_BAR_PREFIX + ASSET2_NAME))
                .check(doesNotExist());
    }

    @Test
    public void clickOnPathbarAsset_lengthExceedsScreen() {
        List<String> names = new ArrayList<>(Arrays.asList(
                ASSET_NAME + 0, ASSET_NAME + 1, ASSET_NAME + 2, ASSET_NAME + 3, ASSET_NAME + 4
        ));

        for (int i = 0; i < names.size(); i++) {
            addAsset(names.get(i));
            clickAsset(0);
        }

        // make sure its directed to asset2's contents view
        checkToolbarTitle(names.get(4));

        // swipe the path bar to the first asset (asset0), then the first asset shall be displayed
        onView(withId(R.id.pathbar_pathview))
                .perform(RecyclerViewActions.scrollToPosition(0));
        onView(withItemTextOnPathBar(PATH_BAR_0_PREFIX + names.get(0)))
                .perform(click());

        // should direct back to asset0's contents view and all other assets
        // should be removed from path bar
        checkToolbarTitle(names.get(0));
        onView(withItemTextOnPathBar(PATH_BAR_PREFIX + names.get(1)))
                .check(doesNotExist());
    }


    @Test
    public void selectionMode_enterModeByClickingButton() {
        //add 3 assets
        addAsset(ASSET1_NAME);
        addAsset(ASSET2_NAME);
        addAsset(ASSET3_NAME);

        //enter the selection mode
        openActionBarOverflowOrOptionsMenu(InstrumentationRegistry.getTargetContext());
        onView(withText(R.string.selection_mode)).perform(click());

        //now all the checkbox should display
        for (int i = 0; i < 3; i++) {
            onData(anything()).inAdapterView(withId(R.id.assets_list))
                    .atPosition(i).onChildView(withId(R.id.asset_checkbox))
                    .check(matches(isDisplayed()));
        }
    }


    @Test
    public void selectionMode_enterModeByLongClickingAnAsset() {
        //add 3 assets
        addAsset(ASSET1_NAME);
        addAsset(ASSET2_NAME);
        addAsset(ASSET3_NAME);

        //enter the selection mode
        onData(anything()).inAdapterView((withId(R.id.assets_list)))
                .atPosition(0).perform(longClick());

        //now all the checkbox should display
        for (int i = 0; i < 3; i++) {
            onData(anything()).inAdapterView(withId(R.id.assets_list))
                    .atPosition(i).onChildView(withId(R.id.asset_checkbox))
                    .check(matches(isDisplayed()));
        }
    }

    @Test
    public void selectionMode_hideUIInSelectionMode() {
        // some UI components should be hided when in selection mode,
        // in case unexpected interactions are performed by the user

        addAsset(ASSET1_NAME);
        clickAsset(0);
        addAsset(ASSET2_NAME);

        // The following UI components should be displayed in the normal mode:
        // PATH BAR
        onView(withId(R.id.pathbar_layout)).check(matches(isDisplayed()));

        // ADD ASSET BUTTON
        onView(withId(R.id.add_asset_button)).check(matches(isDisplayed()));

        // SEARCH BUTTON (menu items)
        onView(withId(R.id.main_menu_search_button)).check(matches(isDisplayed()));

        // DETAILS TAB
        onView(allOf(isDescendantOfA(withId(R.id.main_tabs)), withText(R.string.details_page)))
                .check(matches(isDisplayed()));

        // enter selection mode
        openActionBarOverflowOrOptionsMenu(InstrumentationRegistry.getTargetContext());
        onView(withText(R.string.selection_mode)).perform(click());

        // NOW THEY SHOULD BE HIDDEN
        onView(withId(R.id.pathbar_layout)).check(matches(not(isDisplayed())));
        onView(withId(R.id.add_asset_button)).check(matches(not(isDisplayed())));
        onView(withId(R.id.main_menu_search_button)).check(doesNotExist());
        onView(allOf(isDescendantOfA(withId(R.id.main_tabs)), withText(R.string.details_page)))
                .check(doesNotExist());
    }

    @Test
    public void selectionMode_tickTheCheckbox() {
        //add 3 assets
        addAsset(ASSET1_NAME);
        addAsset(ASSET2_NAME);
        addAsset(ASSET3_NAME);

        //enter the selection mode
        onData(anything()).inAdapterView((withId(R.id.assets_list)))
                .atPosition(0).perform(longClick());

        //tick the first asset's checkbox
        onData(anything()).inAdapterView(withId(R.id.assets_list))
                .atPosition(0).perform(click());
        //now the first asset should be ticked
        onData(anything()).inAdapterView(withId(R.id.assets_list))
                .atPosition(0).onChildView(withId(R.id.asset_checkbox))
                .check(matches(isChecked()));
    }

    @Test
    public void selectionMode_untickTheCheckbox() {
        //add 3 assets
        addAsset(ASSET1_NAME);
        addAsset(ASSET2_NAME);
        addAsset(ASSET3_NAME);

        //enter the selection mode
        onData(anything()).inAdapterView((withId(R.id.assets_list)))
                .atPosition(0).perform(longClick());
        //click the item twice to tick and then untick the checkbox
        onData(anything()).inAdapterView(withId(R.id.assets_list))
                .atPosition(0).perform(click(), click());
        //now the checkbox should not be checked
        onData(anything()).inAdapterView(withId(R.id.assets_list))
                .atPosition(0).onChildView(withId(R.id.asset_checkbox))
                .check(matches(isNotChecked()));
    }


    @Test
    public void selectionMode_quitMode() {
        //add 3 assets
        addAsset(ASSET1_NAME);
        addAsset(ASSET2_NAME);
        addAsset(ASSET3_NAME);

        //enter the selection mode
        onData(anything()).inAdapterView((withId(R.id.assets_list)))
                .atPosition(0).perform(longClick());

        //quit the selection mode by clicking the CANCEL button
        onView(withId(R.id.selection_cancel_button)).check(matches(isDisplayed()));
        onView(withId(R.id.selection_cancel_button)).perform(click());

        //now the CANCEL button and all the checkbox should disappear
        onView(withId(R.id.selection_cancel_button)).check(matches(not(isDisplayed())));
        for (int i = 0; i < 3; i++) {
            onData(anything()).inAdapterView(withId(R.id.assets_list))
                    .atPosition(i).onChildView(withId(R.id.asset_checkbox))
                    .check(matches(not(isDisplayed())));
        }
    }

    @Test
    public void moveAsset_hideUIWhenMoving() {
        // some UI components should be hided when moving assets,
        // in case unexpected interactions are performed by the user

        addAsset(ASSET1_NAME);
        clickAsset(0);
        addAsset(ASSET2_NAME);

        // The following UI components should be displayed in the normal mode:
        // ADD ASSET BUTTON
        onView(withId(R.id.add_asset_button)).check(matches(isDisplayed()));

        // SEARCH BUTTON (menu items)
        onView(withId(R.id.main_menu_search_button)).check(matches(isDisplayed()));

        // DETAILS TAB
        onView(allOf(isDescendantOfA(withId(R.id.main_tabs)), withText(R.string.details_page)))
                .check(matches(isDisplayed()));

        // enter selection mode
        openActionBarOverflowOrOptionsMenu(InstrumentationRegistry.getTargetContext());
        onView(withText(R.string.selection_mode)).perform(click());

        // select item and click move button
        onData(anything()).inAdapterView((withId(R.id.assets_list)))
                .atPosition(0).perform(click());
        onView(withId(R.id.selection_move_button)).perform(click());

        // NOW THEY SHOULD BE HIDDEN
        onView(withId(R.id.add_asset_button)).check(matches(not(isDisplayed())));
        onView(withId(R.id.main_menu_search_button)).check(doesNotExist());
        onView(allOf(isDescendantOfA(withId(R.id.main_tabs)), withText(R.string.details_page)))
                .check(doesNotExist());

        // PATH BAR should be DISPLAYED
        onView(withId(R.id.pathbar_layout)).check(matches(isDisplayed()));
    }

    @Test
    public void moveAsset_seleteNothing() {
        //add some assets following such structure:
        //dining room > table big, table small
        //living room > (empty)
        prepareAssetsToMove();

        //enter selection mode by long-click an item
        onData(anything()).inAdapterView((withId(R.id.assets_list)))
                .atPosition(0).perform(longClick());

        //select nothing and click MOVE button
        onView(withId(R.id.selection_move_button)).perform(click());

        //cancel move
        onView(withId(R.id.selection_cancel_button)).perform(click());

        //two tables should stay where they were
        onView(withChild(withText(ASSET_TABLE_BIG))).check(matches(isDisplayed()));
        onView(withChild(withText(ASSET_TABLE_SMALL))).check(matches(isDisplayed()));

        //and the living room should still be empty
        onView(withId(R.id.pathbar_root)).perform(click());
        clickAsset(1);
        onView(withChild(withText(ASSET_TABLE_BIG))).check(doesNotExist());
        onView(withChild(withText(ASSET_TABLE_SMALL))).check(doesNotExist());

    }

    @Test
    public void moveAsset_seleteSomeAssets() {
        //add some assets following such structure:
        //dining room > table big, table small
        //living room > (empty)
        prepareAssetsToMove();

        //enter selection mode by long-click an item
